--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <html lang="en">
 <head>
-    <title>Republic CSS Framework</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="republic.css"/>
-    <link rel="stylesheet" type="text/css" href="demo.css"/>
-    <link href='http://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="http://republic.terrillo.me/"/>
-    <meta name="description" content="Republic CSS is a simple responsive CSS grid with IE 5+ support. Less than 1kb."/>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-56965921-2', 'auto');
-      ga('send', 'pageview');
-    </script>
-</head>
+     <title>Republic CSS Framework</title>
+     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+     <link rel="stylesheet" type="text/css" href="republic.css"/>
+     <link rel="stylesheet" type="text/css" href="demo.css"/>
+     <link href="http://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet" type="text/css">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link rel="canonical" href="http://republic.terrillo.me/"/>
+     <meta name="description" content="Republic CSS is a simple responsive CSS grid for phones and tablets with IE 5+ support. Less than 1kb."/>
+     <script>
+       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            ga('create', 'UA-57207993-1', 'auto');
+            ga('send', 'pageview');
+     </script>
+     </head>
 <body>
 
     <h1><span>Republic CSS</span> Grid / Framework</h1>
@@ -63,7 +63,7 @@
       <a href="https://github.com/terrillo/Republic-CSS-Framework">
           <button>Explore on GitHub</button>
       </a>
-      <a href="republic.zip">
+      <a href="https://github.com/terrillo/Republic-CSS-Framework/archive/master.zip">
           <button>Download Republic</button>
       </a>
       
