--- a/demo/index.html
+++ b/demo/index.html
@@ -1,9 +1,12 @@
 <html>
 <head>
 	<title>Republic</title>
+	<link rel="stylesheet" type="text/css" href="../builds/republic.min.css"/>
 	<link rel="stylesheet" type="text/css" href="demo.css"/>
 </head>
 <body>
+	
+
 
 </body>
 </html>
